[gd_scene load_steps=18 format=3 uid="uid://b37invkti8n3b"]

[ext_resource type="Script" uid="uid://djumuswhau7j5" path="res://map/map.gd" id="1_kxmgb"]
[ext_resource type="Script" uid="uid://blrxwd7sud3vd" path="res://map/level_camera_2d.gd" id="3_112ik"]
[ext_resource type="Script" uid="uid://b7y536phuh8xl" path="res://map/enemies.gd" id="4_i5grx"]
[ext_resource type="PackedScene" uid="uid://c0ynell8yescv" path="res://units/unit_template/unit_template.tscn" id="5_lct0g"]
[ext_resource type="PackedScene" uid="uid://2cyn61pad45a" path="res://units/tank_template/tank_template.tscn" id="6_k8tny"]
[ext_resource type="Theme" uid="uid://b8cdpud5xabcr" path="res://main_map/Main_Theme.tres" id="7_ap8vc"]
[ext_resource type="Script" uid="uid://v8h3pl0521xa" path="res://map/map_progress_bar.gd" id="8_wnugf"]
[ext_resource type="Texture2D" uid="uid://di4bggnp76ya4" path="res://units/unit_template/assets/unit template.png" id="9_112ik"]
[ext_resource type="Texture2D" uid="uid://cykiddu3ib18" path="res://units/tank_template/Assets/tank_default.png" id="10_112ik"]
[ext_resource type="Texture2D" uid="uid://d3iysusb0vg5q" path="res://Assets/bin.png" id="11_i5grx"]
[ext_resource type="Texture2D" uid="uid://fpo6ttabcjpc" path="res://units/sniper_template/Assets/sniper_default.png" id="12_k8tny"]
[ext_resource type="Texture2D" uid="uid://3bhr4dfiowvn" path="res://units/heavy_template/Assets/heavy_default.png" id="15_w1ifk"]
[ext_resource type="ButtonGroup" uid="uid://d0gaqwru0vtef" path="res://map/battle_mode.tres" id="15_wnugf"]
[ext_resource type="Texture2D" uid="uid://d3jwwa8lhksjk" path="res://units/medic_template/assets/medic_template.png" id="17_g0u07"]
[ext_resource type="Texture2D" uid="uid://qjv44f7c7itf" path="res://units/elite_template/Assets/elite_template.png" id="18_8lto5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_757db"]
size = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_71pa8"]
font_size = 27

[node name="Node2D" type="Node2D"]
script = ExtResource("1_kxmgb")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(540, 75)
zoom = Vector2(4.01, 4.01)
position_smoothing_enabled = true
script = ExtResource("3_112ik")

[node name="Player1" type="Node" parent="."]
script = ExtResource("4_i5grx")

[node name="Player2" type="Node" parent="."]

[node name="unit_template" parent="Player2" instance=ExtResource("5_lct0g")]
position = Vector2(230, -29)

[node name="unit_template2" parent="Player2" instance=ExtResource("5_lct0g")]
position = Vector2(278, -24)

[node name="tank_template" parent="Player2" instance=ExtResource("6_k8tny")]
position = Vector2(262, -64)
rotation = -0.472116

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_757db")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Phase Bar" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Phase Bar"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Phase Bar/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Phase Bar/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Setup"
label_settings = SubResource("LabelSettings_71pa8")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Phase Bar/PanelContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("7_ap8vc")
show_percentage = false
script = ExtResource("8_wnugf")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_top = 50.0
offset_right = 159.0
offset_bottom = 100.0

[node name="Keep" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Keep"

[node name="Direct" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Direct"

[node name="Line" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Lines"

[node name="UnitButtons" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -100.0
offset_right = 2.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UnitButtons"]
texture_filter = 1
layout_mode = 2

[node name="Unit" type="Button" parent="CanvasLayer/UnitButtons/HBoxContainer"]
layout_mode = 2
icon = ExtResource("9_112ik")
alignment = 2

[node name="Tank" type="Button" parent="CanvasLayer/UnitButtons/HBoxContainer"]
layout_mode = 2
icon = ExtResource("10_112ik")
alignment = 2

[node name="Sniper" type="Button" parent="CanvasLayer/UnitButtons/HBoxContainer"]
layout_mode = 2
icon = ExtResource("12_k8tny")

[node name="Heavy" type="Button" parent="CanvasLayer/UnitButtons/HBoxContainer"]
layout_mode = 2
icon = ExtResource("15_w1ifk")

[node name="Medic" type="Button" parent="CanvasLayer/UnitButtons/HBoxContainer"]
layout_mode = 2
icon = ExtResource("17_g0u07")

[node name="Elite" type="Button" parent="CanvasLayer/UnitButtons/HBoxContainer"]
layout_mode = 2
icon = ExtResource("18_8lto5")

[node name="ExtraButtons" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 50.0
offset_bottom = 90.0
grow_horizontal = 0

[node name="Bin" type="Button" parent="CanvasLayer/ExtraButtons"]
layout_mode = 2
icon = ExtResource("11_i5grx")

[node name="UnitModes" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 49.0
offset_right = 20.0
offset_bottom = 89.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UnitModes"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/UnitModes/VBoxContainer"]
layout_mode = 2
text = "Battle Mode:"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UnitModes/VBoxContainer"]
layout_mode = 2

[node name="Static" type="CheckBox" parent="CanvasLayer/UnitModes/VBoxContainer/HBoxContainer"]
layout_mode = 2
button_group = ExtResource("15_wnugf")
text = "Static"

[node name="Charge" type="CheckBox" parent="CanvasLayer/UnitModes/VBoxContainer/HBoxContainer"]
layout_mode = 2
button_group = ExtResource("15_wnugf")
text = "Charge"

[connection signal="state_changed" from="CanvasLayer/Phase Bar/PanelContainer/ProgressBar" to="." method="_on_progress_bar_state_changed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Keep" to="Player1" method="_on_keep_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Direct" to="Player1" method="_on_direct_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Line" to="Player1" method="_on_line_pressed"]
[connection signal="pressed" from="CanvasLayer/UnitButtons/HBoxContainer/Unit" to="." method="_on_base_unit_pressed"]
[connection signal="pressed" from="CanvasLayer/UnitButtons/HBoxContainer/Tank" to="." method="_on_tank_pressed"]
[connection signal="pressed" from="CanvasLayer/UnitButtons/HBoxContainer/Sniper" to="." method="_on_sniper_pressed"]
[connection signal="pressed" from="CanvasLayer/UnitButtons/HBoxContainer/Heavy" to="." method="_on_heavy_pressed"]
[connection signal="pressed" from="CanvasLayer/UnitButtons/HBoxContainer/Medic" to="." method="_on_medic_pressed"]
[connection signal="pressed" from="CanvasLayer/UnitButtons/HBoxContainer/Elite" to="." method="_on_elite_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/ExtraButtons/Bin" to="." method="_on_bin_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/UnitModes/VBoxContainer/HBoxContainer/Static" to="." method="_on_mode_changed"]
[connection signal="pressed" from="CanvasLayer/UnitModes/VBoxContainer/HBoxContainer/Charge" to="." method="_on_mode_changed"]
